fix overflow with resize in extension component + fav extensions

--- a/src/app/extension/extension.component.css
+++ b/src/app/extension/extension.component.css
@@ -25,7 +25,7 @@ section{
     background: white;
 }
 .info{
-    height: 25%;
+    height: 45%;
 }
 .extension-info.fade-in{
     transform: translate(0);
